Downgrade to 1.8 coretto. Delete redundant comments